# chess-clock

./: .gitignore  manage.py  pyproject.toml
chessclock/: asgi.py  settings.py  urls.py  wsgi.py
clock/: views.py
games/: admin.py  models.py  redis_connection.py  routing.py  urls.py  views.py
games/consumers/: __init__.py  game.py  queue.py
games/lua_scripts/: matchmaking.lua
games/migrations/: 0001_initial.py  0002_ratings_rating.py  0003_alter_games_ended_at.py  0004_games_status_games_winner.py
games/templates/games/: game.html  index.html  lobby.html
infra/: compose.yml
scripts/seeds/: users.py
templates/registration/: login.html
