[project]
name = "chess-clock"
version = "0.1.0"
description = "Scalability test with django"
authors = [
    {name = "Toni Mercadante",email = "mercadanteneto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "django-stubs (>=5.2.9,<6.0.0)",
    "channels (>=4.3.2,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "redis (>=7.2.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
